# pippo

./: .gitattributes  .gitignore  Cargo.toml  README.md  pippo-encryption-migrate.sh
.github/workflows/: ci.yml  release.yml
src/: auth.rs  certificates.rs  clap_app.rs  clap_models.rs  client.rs  config.rs  domains.rs  encryption.rs  environments.rs  errors.rs  execution.rs  logs.rs  main.rs  models.rs  pipelines.rs  programs.rs  variables.rs
src/models/: auth.rs  basic.rs  certificates.rs  config.rs  domain.rs  domains.rs  environment.rs  environments.rs  execution.rs  executions.rs  log.rs  logs.rs  mod.rs  pipeline.rs  pipelines.rs  program.rs  variables.rs
test/: test_auth_bearer_response.json  test_auth_jwt_response.json  test_domain_config.json  test_domain_response.json  test_environment_response.json  test_execution_response.json  test_log_response.json  test_pipeline_response.json  test_programs_response.json  test_yaml_config.yml
test/variables/: environment_variables_response.json
