[package]
name = "pippo"
version = "0.0.1-SNAPSHOT"
authors = ["Nico Bellack", "Tobias Richter", "Benjamin Sommerfeld"]
description = "Rust-powered tool to communicate with Adobe Cloud Manager"
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/wcm-io-devops/pippo"
repository = "https://github.com/wcm-io-devops/pippo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ctrlc = "1.2.0"
async-trait = "0.1.87"
cargo-edit = "0.13.2"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "3.2.25", features = ["derive", "yaml", "env"] }
colored = "3.0.0"
env_logger = "0.11.6"
flate2 = "1.1.0"
futures-lite = "2.6.0"
jsonwebtoken = "9.3.1"
log = "0.4.26"
magic-crypt = "4.0.1"
num = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }

serde_json = "1.0.140"
serde_yaml = "0.9.34"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.44.2", features = ["full"] }
headers = "0.4.0"
rustls = "0.23.23"
[dependencies.reqwest]
version = "0.12.12"
#default-features = false
features = ["json", "rustls-tls"] 
[dependencies.uuid]
version = "1.15.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "apt-get update && apt-get install --assume-yes libssl-dev"
]

[target.x86_64-apple-darwin.dependencies]
openssl = { version = "0.10.71", features = ["vendored"] }


