[package]
name = "pippo"
version = "0.0.1-SNAPSHOT"
authors = ["Nico Bellack", "Tobias Richter", "Benjamin Sommerfeld"]
description = "Rust-powered tool to communicate with Adobe Cloud Manager"
edition = "2018"
license = "Apache-2.0"
homepage = "https://github.com/wcm-io-devops/pippo"
repository = "https://github.com/wcm-io-devops/pippo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ctrlc = "1.2.0"
async-trait = "0.1.89"
cargo-edit = "0.13.3"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "3.2.25", features = ["derive", "yaml", "env"] }
colored = "3.0.0"
env_logger = "0.11.6"
flate2 = "1.1.5"
futures-lite = "2.6.1"
jsonwebtoken = "9.3.1"
log = "0.4.29"
magic-crypt = "4.0.1"
num = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }

serde_json = "1.0.145"
serde_yaml = "0.9.34"
strum = "0.27.2"
strum_macros = "0.27.2"
tokio = { version = "1.48.0", features = ["full"] }
headers = "0.4.1"
rustls = "0.23.35"
[dependencies.reqwest]
version = "0.12.28"
#default-features = false
features = ["json", "rustls-tls"] 
[dependencies.uuid]
version = "1.18.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[package.metadata.cross.target.x86_64-unknown-linux-gnu]
pre-build = [
    "apt-get update && apt-get install --assume-yes libssl-dev"
]

[target.x86_64-apple-darwin.dependencies]
openssl = { version = "0.10.74", features = ["vendored"] }


